changed board to an array, changed boardModule accordingly. Removed square divs from html. Generated new divs from board array.

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,8 @@ h1 {
     margin-bottom: 50px;
     font-size: 50px;
     align-self: center;
+    width: 305px;
+    text-align: center;
 }
 
 .board {
